--- a/eleks/oracle/cabal.project
+++ b/eleks/oracle/cabal.project
@@ -1,4 +1,4 @@
-index-state: 2021-04-13T00:00:00Z
+index-state: 2021-08-14T00:00:00Z
 
 packages: ./.
 
@@ -9,16 +9,16 @@ write-ghc-environment-files: never
 tests: true
 benchmarks: true
 
--- Plutus revision from 2021/06/11
+-- Plutus revision from 2021/08/16
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
   subdir:
     freer-extras
     playground-common
-    plutus-chain-index
     plutus-core
     plutus-contract
+    plutus-chain-index
     plutus-ledger
     plutus-ledger-api
     plutus-tx
@@ -28,8 +28,14 @@ source-repository-package
     prettyprinter-configurable
     quickcheck-dynamic
     word-array
-  tag: 1426912c3f8c29e7ca8754dafae81eaf281e1ee6
-  --tag: 8c83c4abe211b4bbcaca3cdf1b2c0e38d0eb683f
+  tag: plutus-starter-devcontainer/v1.0.10
+
+
+-- The following sections are copied from the 'plutus' repository cabal.project at the revision
+-- given above.
+-- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
+-- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
+-- re-update this section from the template when you do an upgrade.
 
 -- We never, ever, want this.
 write-ghc-environment-files: never
