--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -50,6 +50,7 @@ library
       Plutus.Contracts.NftMarketplace.Endpoints
       Plutus.Contracts.NftMarketplace.OffChain.ID
       Plutus.Contracts.NftMarketplace.OffChain.Info
+      Plutus.Contracts.NftMarketplace.OffChain.Controller
       Plutus.Contracts.NftMarketplace.OffChain.Owner
       Plutus.Contracts.NftMarketplace.OffChain.Serialization
       Plutus.Contracts.NftMarketplace.OffChain.User
@@ -67,6 +68,8 @@ library
       Plutus.Contracts.Services.Sale.Endpoints
       Plutus.Contracts.Services.Sale.StateMachine
       Plutus.PAB.Simulation
+      Plutus.PAB.Client
+      Plutus.PAB.MarketplaceContracts
       
     build-depends:
       QuickCheck,
@@ -84,6 +87,8 @@ library
       semigroups,
       servant-options,
       servant-server,
+      servant-client,
+      http-client,
       text,
       wai-cors,
       openapi3 -any,
