add static swap enpoint, enable Nami Wallet, fetch Wallet info from Nami Wallet to use in Static Swap

--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -28,6 +28,7 @@ library
                , monad-logger
                , mtl
                , postgresql-simple
+               , process
                , resource-pool
                , rhyolite-backend
                , rhyolite-backend-db
