--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -14,6 +14,7 @@ library
                , obelisk-frontend
                , obelisk-route
                , jsaddle
+               , jsaddle-dom
                , reflex-dom
                , lens
                , lens-aeson
