--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -174,6 +174,7 @@ test-suite test
       Marketplace.Spec.Auction
       Marketplace.Spec.Bundles
       Marketplace.Spec.CreateNft
+      Marketplace.Spec.ImportNft
       Marketplace.Spec.Sale
       Marketplace.Spec.Start
       Utils
