Add generation script

--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -163,6 +163,32 @@ executable generate-typescript
     plutus-ledger-api,
     plutus-tx
 
+executable generate-pab-typescript
+  import: lang
+  main-is: Main.hs
+  hs-source-dirs: generate-pab-typescript
+  ghc-options:
+    -threaded
+  build-depends:
+    base >= 4.9 && < 5,
+    aeson-typescript,
+    servant-purescript -any,
+    mtl,
+    directory,
+    lens,
+    aeson,
+    bytestring,
+    -- Plutus:
+    plutus-starter,
+    plutus-pab,
+    plutus-contract,
+    plutus-ledger-api,
+    plutus-tx,
+    plutus-ledger,
+    containers,
+    plutus-core,
+    word8
+
 test-suite test
     import: lang
     type: exitcode-stdio-1.0
