Nft: proof based linked list implementation (closing #170 #174) (#176)
* update: separate API

* WIP: refactor the existing for uniqueness list

* WIP: REPL compiles

* update: added some more information in comments

* update: working initialisation

* update: added Proof token to head init

* update: wrapped CSymbol

* update: further fixed functions

* update: pre-merge

* wip: splitting Contract module

* redundant imports deleted

* wip: linked list minting
- minting off-chain logic
- Enbpoints -> Contract module structure renaming

* wip: linked list minting
- minting off-chain logic
- Enbpoints -> Contract module structure renaming

* NFT: Rewrite set-price contract

* NFT: Implement on-chain price-set

* NFT: Add off-chain checks in set-price contract

* update: add Init Trace

* update: Head token is empty

* NFT: Rewrite buy contract

* NFT: Implement on-chain buy

* NFT: Fix mint insert point lookup

* update: minting Contract

* update: Minting works

* update: fixed Head bug

* update: linting

* NFT: Implement on-chain minting

* update: merge proof and head nodes

* WIP: minitng Policy with todos

* WIP: updated Mint Contract to only use the one utxo that is updated

* NFT: Finish minting policy

* NFT: Fix on-chain checks

* NFT: Make `buy` and `set-price` work again

* update: solve cabal review

* linked list implementation - adapt tests (#205)

* Add a hacky minting test

* Add more tests, move some values to TestValues module

* Move minting tests to Minting module

* Move script tests to Script folder

* Fix mkTxPolicy name

* Add valid buy test for dealing (wip)

* wip

* wip

* Add todo for tasty options

* wip

* Use tasty options to set testTxId

* wip, passes validator

* wip

* new tests, wip

* Fix owner payment validator

* Formatting

* wip

* NFT: Fix shares calculations

* Update plutus-extra (for fixed tasty-plutus pretty-print

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -89,7 +89,6 @@ common common-ghc-options
     -fno-strictness
     -fno-warn-orphans
     -fobject-code
---    -fplugin-opt PlutusTx.Plugin:defer-errors -- do not use for build 
 
 library
   import:  common-imports
@@ -160,6 +159,12 @@ library
     Mlabs.NFT.Types
     Mlabs.NFT.Contract
     Mlabs.NFT.Validation
+    Mlabs.NFT.Api
+    Mlabs.NFT.Contract.Init
+    Mlabs.NFT.Contract.Mint
+    Mlabs.NFT.Contract.Aux
+    Mlabs.NFT.Contract.SetPrice
+    Mlabs.NFT.Contract.Buy
 
 executable mlabs-plutus-use-cases
   import:  common-imports
