--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -14,6 +14,8 @@ library
                , beam-core
                , beam-postgres
                , bytestring
+               , cardano-binary
+               , cardano-prelude
                , common
                , constraints-extras
                , dense-linear-algebra
