--- a/eleks/oracle/cabal.project
+++ b/eleks/oracle/cabal.project
@@ -12,28 +12,22 @@ benchmarks: true
 -- Plutus revision from 2021/08/16
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/plutus.git
+  location: https://github.com/input-output-hk/plutus-apps.git
   subdir:
     freer-extras
     playground-common
-    plutus-core
     plutus-contract
     plutus-chain-index
     plutus-ledger
-    plutus-ledger-api
-    plutus-tx
-    plutus-tx-plugin
     plutus-pab
     plutus-use-cases
-    prettyprinter-configurable
     quickcheck-dynamic
-    word-array
-  tag: plutus-starter-devcontainer/v1.0.10
+  tag: plutus-starter-devcontainer/v1.0.14
 
 
--- The following sections are copied from the 'plutus' repository cabal.project at the revision
+-- The following sections are copied from the 'plutus-apps' repository cabal.project at the revision
 -- given above.
--- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
+-- This is necessary because the  'plutus-apps' libraries depend on a number of other libraries which are
 -- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
 -- re-update this section from the template when you do an upgrade.
 
@@ -48,7 +42,7 @@ benchmarks: true
 test-show-details: streaming
 
 allow-newer:
-           -- Pins to an old version of Template Haskell, unclear if/when it will be updated
+           -- Copied from plutus-core
            size-based:template-haskell
            , ouroboros-consensus-byron:formatting
            , beam-core:aeson
@@ -56,6 +50,7 @@ allow-newer:
            , beam-sqlite:dlist
            , beam-migrate:aeson
 
+-- Copied from plutus-core
 constraints:
   -- big breaking change here, inline-r doens't have an upper bound
   singletons < 3.0
@@ -63,10 +58,6 @@ constraints:
   -- ones they reuse the one from 'some', but there isn't e.g. a proper version
   -- constraint from dependent-sum-template (which is the library we actually use).
   , dependent-sum > 0.6.2.0
-
--- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
--- (NOTE this will change to ieee754 in newer versions of nixpkgs).
-extra-packages: ieee, filemanip
 
 -- These packages appear in our dependency tree and are very slow to build.
 -- Empirically, turning off optimization shaves off ~50% build time.
@@ -81,8 +72,7 @@ package ouroboros-consensus-cardano
 package cardano-api
   optimization: False
 
--- https://github.com/Quid2/flat/pull/22 fixes a potential exception
--- when decoding invalid (e.g. malicious) text literals.
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/Quid2/flat.git
@@ -99,15 +89,17 @@ source-repository-package
   location: https://github.com/input-output-hk/servant-purescript.git
   tag: a0c7c7e37c95564061247461aef4be505a853538
 
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
   tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
 
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 592aa61d657ad5935a33bace1243abce3728b643
+  tag: 4ea7e2d927c9a7f78ddc69738409a5827ab66b98
   subdir:
     base-deriving-via
     binary
@@ -120,6 +112,7 @@ source-repository-package
     slotting
     strict-containers
 
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
@@ -149,10 +142,11 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 5d37a927046bc7da2887830d8e35cf604622ce09
+  tag: 1f4973f36f689d6da75b5d351fb124d66ef1057d
   subdir:
     monoidal-synchronisation
     typed-protocols
+    typed-protocols-cborg
     typed-protocols-examples
     ouroboros-network
     ouroboros-network-testing
@@ -192,32 +186,31 @@ source-repository-package
 
 source-repository-package
   type: git
-  location: https://github.com/raduom/cardano-ledger-specs
-  tag: ef6bb99782d61316da55470620c7da994cc352b2
+  location: https://github.com/input-output-hk/cardano-ledger-specs
+  tag: bf008ce028751cae9fb0b53c3bef20f07c06e333
   subdir:
-    byron/chain/executable-spec
-    byron/crypto
-    byron/crypto/test
-    byron/ledger/executable-spec
     byron/ledger/impl
-    byron/ledger/impl/test
-    semantics/executable-spec
-    cardano-protocol-tpraos
-    semantics/small-steps-test
-    shelley/chain-and-ledger/dependencies/non-integer
-    shelley/chain-and-ledger/executable-spec
-    shelley/chain-and-ledger/shelley-spec-ledger-test
-    shelley-ma/impl
     cardano-ledger-core
-    alonzo/impl
+    cardano-protocol-tpraos
+    eras/alonzo/impl
+    eras/byron/chain/executable-spec
+    eras/byron/crypto
+    eras/byron/crypto/test
+    eras/byron/ledger/executable-spec
+    eras/byron/ledger/impl/test
+    eras/shelley/impl
+    eras/shelley-ma/impl
+    libs/non-integral
+    libs/small-steps
+    semantics/small-steps-test
 
--- A lot of plutus dependencies have to be synchronized with the dependencies of
+-- A lot of plutus-apps dependencies have to be synchronized with the dependencies of
 -- cardano-node. If you update cardano-node, please make sure that all dependencies
 -- of cardano-node are also updated.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: ed7fdbf65f40f8e194850b87dd8c631fe26154e6
+  tag: b6ca519f97a0e795611a63174687e6bb70c9f752
   subdir:
     cardano-api
     cardano-node
@@ -236,10 +229,21 @@ source-repository-package
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/hedgehog-extras
-  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
-
-source-repository-package
-  type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+
+-- A lot of plutus-apps dependencies have to be syncronized with the dependencies of
+-- plutus. If you update plutus, please make sure that all dependencies of plutus
+-- are also updated
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/plutus
+  tag: 3f089ccf0ca746b399c99afe51e063b0640af547
+  subdir:
+    plutus-core
+    plutus-ledger-api
+    plutus-tx
+    plutus-tx-plugin
+    word-array
+    prettyprinter-configurable
+    stubs/plutus-ghc-stub
