add isNftInValue tests

--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -176,6 +176,7 @@ test-suite test
     other-modules:
       Abstract.Percentage
       Abstract.RemoteDataSpec 
+      Ext.Value
       Marketplace.Fixtures
       Marketplace.Fixtures.CheckOptions
       Marketplace.Fixtures.NFT
