--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -297,6 +297,7 @@ Test-suite mlabs-plutus-use-cases-tests
     Test.NFT.Trace
     Test.NFT.Contract
     Test.NFT.QuickCheck
+    Test.NFT.Script.Auction
     Test.NFT.Script.Main
     Test.NFT.Script.Dealing
     Test.NFT.Script.Minting
