--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -1,53 +1,56 @@
--- in-line with: b29106559f97cdea24bfd91cbd362a476d2156c4
--- 2021/09/20
+-- in-line with: 3f089ccf0ca746b399c99afe51e063b0640af547
+-- 2021/11/10
 -- Keep this input-output-hk/plutus pinned with the one from plutus.
-index-state: 2021-08-14T00:00:00Z
-             
+index-state: 2021-10-20T00:00:00Z
+
 packages: ./.
 
 source-repository-package
   type: git
-  location: https://github.com/Liqwid-Labs/plutus-extra.git
-  tag: b34f7ac0813aaf982ad8c65bcc3c2a54a601e601
+  location: https://github.com/ngua/plutus-extra.git
+  tag: cc6fa1cffc503e02555e228b5616f32b6b3c2ce9
   subdir: plutus-extra
           tasty-plutus
+          plutus-pretty
+          plutus-numeric
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
   subdir:
-    doc
-    fake-pab
-    freer-extras
-    marlowe
-    marlowe-dashboard-server
-    marlowe-symbolic
-    playground-common
-    plutus-benchmark
-    plutus-chain-index
-    plutus-contract
     plutus-core
-    plutus-errors
-    plutus-ledger
     plutus-ledger-api
-    plutus-metatheory
-    plutus-pab
-    plutus-playground-server
     plutus-tx
     plutus-tx-plugin
-    plutus-use-cases
-    prettyprinter-configurable
-    quickcheck-dynamic
-    web-ghc
     word-array
+    prettyprinter-configurable
     stubs/plutus-ghc-stub
   -- Update plutus revision here! Make sure this matches `cat ./nix/sources.json | jq '.plutus.rev'`
-  tag: 58c093a49eb7a369865e361179d649264fc817a4
+  tag: 3f089ccf0ca746b399c99afe51e063b0640af547
 
--- The following sections are copied from the 'plutus' repository cabal.project at the revision
--- given above.
--- This is necessary because the  plutus' libraries depend on a number of other libraries which are
--- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/plutus-apps.git
+  subdir:
+    doc
+    freer-extras
+    playground-common
+    plutus-chain-index
+    plutus-chain-index-core
+    plutus-contract
+    plutus-ledger
+    plutus-pab
+    plutus-playground-server
+    plutus-use-cases
+    quickcheck-dynamic
+    web-ghc
+  tag: 404af7ac3e27ebcb218c05f79d9a70ca966407c9
+
+-- The following sections are copied from the combined 'plutus' and 'plutus-apps' repositories'
+-- 'cabal.project's at the revisions given above.
+--
+-- This is necessary because these libraries depend on a number of other libraries which are not
+-- on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
 -- re-update this section from the template when you do an upgrade.
 
 ---------- *replace here* ----------------------------------------------------------------------
@@ -78,6 +81,9 @@ constraints:
   -- ones they reuse the one from 'some', but there isn't e.g. a proper version
   -- constraint from dependent-sum-template (which is the library we actually use).
   , dependent-sum > 0.6.2.0
+  -- Newer Hashable have instances for Set, which breaks beam-migrate
+  -- which declares its own instances of Hashable Set
+  , hashable < 1.3.4.0
 
 -- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
 -- (NOTE this will change to ieee754 in newer versions of nixpkgs).
@@ -96,8 +102,7 @@ package ouroboros-consensus-cardano
 package cardano-api
   optimization: False
 
--- https://github.com/Quid2/flat/pull/22 fixes a potential exception
--- when decoding invalid (e.g. malicious) text literals.
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/Quid2/flat.git
@@ -106,35 +111,38 @@ source-repository-package
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
   type: git
-  location: https://github.com/shmish111/purescript-bridge.git
-  tag: 6a92d7853ea514be8b70bab5e72077bf5a510596
+  location: https://github.com/input-output-hk/purescript-bridge.git
+  tag: 366fc70b341e2633f3ad0158a577d52e1cd2b138
 
 source-repository-package
   type: git
-  location: https://github.com/shmish111/servant-purescript.git
-  tag: a76104490499aa72d40c2790d10e9383e0dbde63
+  location: https://github.com/input-output-hk/servant-purescript.git
+  tag: ebea59c7bdfc0338d83fca772b9a57e28560bcde
 
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
   tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
 
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 592aa61d657ad5935a33bace1243abce3728b643
+  tag: 4ea7e2d927c9a7f78ddc69738409a5827ab66b98
   subdir:
     base-deriving-via
     binary
     binary/test
-    measures
-    orphans-deriving-via
-    slotting
     cardano-crypto-class
     cardano-crypto-praos
     cardano-crypto-tests
+    measures
+    orphans-deriving-via
+    slotting
     strict-containers
 
+-- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
@@ -149,25 +157,31 @@ source-repository-package
   tag: d2f86caa085402a953920c6714a0de6a50b655ec
   subdir:
     core
+    command-line
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/cardano-wallet
-  tag: ae7569293e94241ef6829139ec02bd91abd069df
+  location: https://github.com/j-mueller/cardano-wallet
+  tag: 6be73ab852c0592713dfe78218856d4a8a0ee69e
   subdir:
     lib/text-class
     lib/strict-non-empty-containers
     lib/core
     lib/test-utils
     lib/numeric
+    lib/launcher
+    lib/core-integration
+    lib/cli
+    lib/shelley
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 5d37a927046bc7da2887830d8e35cf604622ce09
+  tag: 1f4973f36f689d6da75b5d351fb124d66ef1057d
   subdir:
     monoidal-synchronisation
     typed-protocols
+    typed-protocols-cborg
     typed-protocols-examples
     ouroboros-network
     ouroboros-network-testing
@@ -207,32 +221,35 @@ source-repository-package
 
 source-repository-package
   type: git
-  location: https://github.com/raduom/cardano-ledger-specs
-  tag: ef6bb99782d61316da55470620c7da994cc352b2
+  location: https://github.com/input-output-hk/cardano-ledger-specs
+  tag: bf008ce028751cae9fb0b53c3bef20f07c06e333
   subdir:
-    byron/chain/executable-spec
-    byron/crypto
-    byron/crypto/test
-    byron/ledger/executable-spec
     byron/ledger/impl
-    byron/ledger/impl/test
-    semantics/executable-spec
-    cardano-protocol-tpraos
-    semantics/small-steps-test
-    shelley/chain-and-ledger/dependencies/non-integer
-    shelley/chain-and-ledger/executable-spec
-    shelley/chain-and-ledger/shelley-spec-ledger-test
-    shelley-ma/impl
     cardano-ledger-core
-    alonzo/impl
+    cardano-protocol-tpraos
+    eras/alonzo/impl
+    eras/byron/chain/executable-spec
+    eras/byron/crypto
+    eras/byron/crypto/test
+    eras/byron/ledger/executable-spec
+    eras/byron/ledger/impl/test
+    eras/shelley/impl
+    eras/shelley-ma/impl
+    eras/shelley/chain-and-ledger/executable-spec
+    eras/shelley/test-suite
+    shelley/chain-and-ledger/shelley-spec-ledger-test
+    libs/non-integral
+    libs/small-steps
+    libs/cardano-ledger-pretty
+    semantics/small-steps-test
 
--- A lot of plutus dependencies have to be synchronized with the dependencies of
+-- A lot of plutus-apps dependencies have to be synchronized with the dependencies of
 -- cardano-node. If you update cardano-node, please make sure that all dependencies
 -- of cardano-node are also updated.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: 191b91eec3c7d845a55347781329d50bf36871d7
+  tag: b6ca519f97a0e795611a63174687e6bb70c9f752
   subdir:
     cardano-api
     cardano-node
@@ -248,11 +265,6 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/Win32-network
   tag: 3825d3abf75f83f406c1f7161883c438dac7277d
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/hedgehog-extras
-  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
 
 source-repository-package
   type: git
