Nft pab endpoints (#246)
* issue-206: NFT simulator endpoints
- NFT contracts hooked to PAB
- Simulator endpoints aded
- marketplace executable added with PAB config sample and readme

* formatting

* update: removed repetition in endpoints

* lint: removed redundant LANGUAGE extensions

Co-authored-by: cstml <cstmlcodes@gmail.com>

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -44,6 +44,7 @@ common common-imports
     , cardano-api
     , cardano-ledger-alonzo
     , plutus-extra
+    , purescript-bridge
 
 common common-language
     default-extensions:
@@ -152,6 +153,9 @@ library
     Mlabs.NFT.Contract.OpenAuction
     Mlabs.NFT.Contract.CloseAuction
     Mlabs.NFT.Contract.BidAuction
+    Mlabs.NFT.PAB.MarketplaceContract
+    Mlabs.NFT.PAB.Run
+    Mlabs.NFT.PAB.Simulator
     Mlabs.NFT.Types
     Mlabs.NFT.Validation
     Mlabs.Nft.Contract
@@ -219,6 +223,15 @@ executable lendex-demo
   import:  common-ghc-options  
 
   main-is: lendex-demo/Main.hs
+  build-depends: mlabs-plutus-use-cases
+
+executable nft-marketplace
+  import:  common-imports
+  import:  common-language
+  import:  common-configs
+  import:  common-ghc-options  
+
+  main-is: nft-marketplace/Main.hs
   build-depends: mlabs-plutus-use-cases
 
 Test-suite mlabs-plutus-use-cases-tests
