--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -288,6 +288,7 @@ Test-suite mlabs-plutus-use-cases-tests
     Test.NFT.Script.Dealing
     Test.NFT.Script.Minting
     Test.NFT.Script.Values
+    Test.NFT.Size
 
   default-extensions:
     RecordWildCards
