pivot: epoh implementation to be continued after MVP deadline

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -157,6 +157,10 @@ library
     Mlabs.NFT.Contract.SetPrice
     Mlabs.NFT.Governance
     Mlabs.NFT.Governance.Validation
+    Mlabs.NFT.Governance.Types
+    Mlabs.NFT.Epoch
+    Mlabs.NFT.Epoch.Validation
+    Mlabs.NFT.Epoch.Types 
     Mlabs.NFT.PAB.MarketplaceContract
     Mlabs.NFT.PAB.Run
     Mlabs.NFT.PAB.Simulator
