NFT: Basic Governance (#255)

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -113,6 +113,7 @@ library
   exposed-modules:
     Mlabs.Control.Check
     Mlabs.Control.Monad.State
+    Mlabs.Data.LinkedList
     Mlabs.Data.List
     Mlabs.Data.Ord
     Mlabs.Demo.Contract.Burn
@@ -145,14 +146,17 @@ library
     Mlabs.NFT.Api
     Mlabs.NFT.Contract
     Mlabs.NFT.Contract.Aux
+    Mlabs.NFT.Contract.BidAuction
     Mlabs.NFT.Contract.Buy
+    Mlabs.NFT.Contract.CloseAuction
     Mlabs.NFT.Contract.Init
     Mlabs.NFT.Contract.Mint
+    Mlabs.NFT.Contract.OpenAuction
     Mlabs.NFT.Contract.Query
     Mlabs.NFT.Contract.SetPrice
-    Mlabs.NFT.Contract.OpenAuction
-    Mlabs.NFT.Contract.CloseAuction
-    Mlabs.NFT.Contract.BidAuction
+    Mlabs.NFT.Governance
+    Mlabs.NFT.Governance.Types
+    Mlabs.NFT.Governance.Validation
     Mlabs.NFT.PAB.MarketplaceContract
     Mlabs.NFT.PAB.Run
     Mlabs.NFT.PAB.Simulator
