--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -178,6 +178,7 @@ library
     Mlabs.System.Console.PrettyLogger
     Mlabs.System.Console.Utils
     Mlabs.Utils.Wallet
+    Mlabs.Plutus.Contracts.Currency
 
 executable mlabs-plutus-use-cases
   import:  common-imports
