--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -149,6 +149,7 @@ library
     Mlabs.NFT.Contract.BidAuction
     Mlabs.NFT.Contract.Buy
     Mlabs.NFT.Contract.CloseAuction
+    Mlabs.NFT.Contract.Fees
     Mlabs.NFT.Contract.Init
     Mlabs.NFT.Contract.Mint
     Mlabs.NFT.Contract.OpenAuction
