Convert nix setup to flakes (#292)
* Convert Nix setup to flakes

Start converting nix setup to flakes

WIP: flake conversion

WIP: Use sources.nix for sha256map for now

WIP: Compatibility shell.nix

Better compatibility shell.nix

Stop using sources.nix for sha256map

Use plutusPkgs for libsodium-vrf

Remove redundant let bind

Put shell config in right place

Use plutus for fourmolu

Newer version of fourmolu requires build

Compatibility default.nix

Remove redundant modules

Remove outdated info from readme

Add explanatory comment to haskell.nix module

Add flake-compat to flake inputs

Add all executables to checks output

Go back to using niv for sha256map

Fix/update nix readme

Also use plutusPkgs for niv

Add flakes transition notes to nix readme

Update CI

Add .envrc and .direnv/ to gitignore

Fix hoogle

Add experimental features flag to build CI

Add yet another flag to build CI

Fix path in CI

Use stack from plutus pkgs

Re-add update.nix

Temporarily disable tests in checks

Add experimental-features to extra_nix_config

* Fix cross-platform support

* Fix build CI

* Update nix readme

* Fix gitignore

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ main, staging ]
+    branches: [main, staging]
   pull_request:
-    branches: [ main, staging ]
+    branches: [main, staging]
   workflow_dispatch:
 
 jobs:
@@ -19,10 +19,11 @@ jobs:
           extra_nix_config: |
             trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
             substituters = https://hydra.iohk.io https://iohk.cachix.org https://cache.nixos.org/
+            experimental-features = nix-command flakes
       - uses: cachix/cachix-action@v10
         with:
           name: mlabs
-          authToken: '${{ secrets.CACHIXKEY }}'
+          authToken: "${{ secrets.CACHIXKEY }}"
       - name: Cache cabal folder
         id: cabal
         uses: actions/cache@v2.1.4
@@ -32,5 +33,6 @@ jobs:
             ~/.cabal/store
             dist-newstyle
           key: ${{ runner.os }}-cabal
-      - name: Build the full ci derivation
-        run: nix-build ./mlabs/nix/ci.nix
+      - name: Build all project components
+        working-directory: ./mlabs
+        run: ./run-tests.sh
