--- a/eleks/oracle/cabal.project
+++ b/eleks/oracle/cabal.project
@@ -1,4 +1,4 @@
-index-state: 2021-08-14T00:00:00Z
+index-state: 2021-10-20T00:00:00Z
 
 packages: ./.
 
@@ -14,22 +14,19 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus-apps.git
   subdir:
-    freer-extras
-    playground-common
-    plutus-chain-index
-    plutus-chain-index-core
-    plutus-contract
-    plutus-ledger
-    plutus-pab
-    plutus-use-cases
-    quickcheck-dynamic
-    web-ghc
-  tag: d57556516d008a2bfb5545b4f431e1d4c8f21887
--- The following sections are copied from the 'plutus-apps' repository cabal.project at the revision
--- given above.
--- This is necessary because the  'plutus-apps' libraries depend on a number of other libraries which are
--- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
--- re-update this section from the template when you do an upgrade.
+     freer-extras
+          freer-extras
+          playground-common
+          plutus-chain-index
+          plutus-chain-index-core
+          plutus-contract
+          plutus-ledger
+          plutus-pab
+          plutus-playground-server
+          plutus-use-cases
+          quickcheck-dynamic
+          web-ghc
+  tag: a78e858f77cd3ecb76877351e0832ee5643f09a9
 
 -- We never, ever, want this.
 write-ghc-environment-files: never
@@ -73,6 +70,16 @@ package ouroboros-consensus-shelley
 package ouroboros-consensus-cardano
   optimization: False
 package cardano-api
+  optimization: False
+package cardano-wallet
+  optimization: False
+package cardano-wallet-core
+  optimization: False
+package cardano-wallet-cli
+  optimization: False
+package cardano-wallet-launcher
+  optimization: False
+package cardano-wallet-core-integration
   optimization: False
 
 -- Copied from plutus-core
